# Commercial-vpn

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 52c269307fec_init_schema.py  53f1a2c8b7d1_create_plans_and_subscriptions.py  9c4d1a7e3b2f_add_devices.py
app/: main.py
app/api/: deps.py  error_handlers.py
app/api/routes/: admin.py  admin_billing.py  admin_plans.py  admin_subscriptions.py  auth.py  billing.py  devices.py  servers.py
app/api/schemas/: admin.py  admin_billing.py  admin_plan.py  admin_subscription.py  billing.py  device.py  server.py  user.py
app/core/: config.py  security.py
app/db/models/: __init__.py  device.py  plan.py  server.py  subscription.py  user.py
app/services/: admin_subscription_service.py  billing_service.py  device_service.py  limits.py  plan_service.py  server_service.py  subscription_service.py
requirements/: base.txt  dev.txt
scripts/: reset_db.sh  smoke.sh  smoke.sh.save
tests/: test_admin_billing_usage.py  test_admin_billing_users.py  test_admin_plans.py  test_billing_expired.py  test_billing_plans.py  test_billing_renew.py  test_billing_summary.py  test_device_revoke.py  test_server_limits.py  test_subscription_cancel_resume.py  test_subscription_expired_handler.py
